updated new translations
Former-commit-id: 039f5e17c40c22089f3fb0d06a3c22e538ae74e8

--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -2,7 +2,6 @@
   "%{name}'s Address": null,
   "%{name}'s Nexus address": null,
   "%{smart_count} address |||| %{smart_count} addresses": null,
-  "(Pending)": "(대기 중)",
   "(This will restart your Core)": null,
   "24hr Change": "24 시간 변경",
   "A contact with the same name already exists.": null,
@@ -27,7 +26,6 @@
   "All Accounts": "모든 계정",
   "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": null,
   "Amount": "양",
-  "Amount: ": "양: ",
   "An unknown error occurred": null,
   "Application": "신청",
   "Are you sure you want to abort the process?": null,
@@ -47,9 +45,8 @@
   "Backup wallet": "백업 월렛",
   "Balance": "균형",
   "Block Count": "블록 수",
-  "Block Hash": "해시 차단",
-  "Block Number": "블록 번호",
   "Block Weight": "블록 무게",
+  "Block hash": null,
   "Bootstrap Recent Database": null,
   "Bootstrap process has been aborted": null,
   "Browse": null,
@@ -60,6 +57,7 @@
   "Cannot find module": null,
   "Cannot install from that location": null,
   "Cannot move to the same account": null,
+  "Category": null,
   "Change password": "비밀번호 변경",
   "Check for Updates...": null,
   "Check wallet": null,
@@ -124,9 +122,9 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
-  "Download": "다운로드",
   "Download Recent Database": null,
   "Download recent database?": null,
+  "Download transactions history": null,
   "Downloading": null,
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": null,
   "Downloading the database": null,
@@ -210,6 +208,8 @@
   "Last updated\n%{time}": null,
   "License Agreement": null,
   "Light": null,
+  "Loading transaction details...": null,
+  "Loading transactions": null,
   "Local Time": "현지 시각",
   "Log in now": null,
   "Log out": null,
@@ -244,7 +244,6 @@
   "Module open source policy": null,
   "Module type": null,
   "Modules": null,
-  "More details": "자세한 내용은",
   "Move NXS": "NXS 이동",
   "Move NXS between accounts": "계정간에 NXS 이동",
   "Moving the database...": null,
@@ -290,7 +289,6 @@
   "Overview": "개요",
   "Overview Display": null,
   "Overwrite module?": null,
-  "PENDING TRANSACTION": "보류중인 거래",
   "Page": "페이지",
   "Password": "암호",
   "Password cannot contain these characters:": null,
@@ -304,6 +302,7 @@
   "Past Week": "지난 주",
   "Past Year": "지난 해",
   "Paste": "풀",
+  "Pending": null,
   "Phone Number": "전화 번호",
   "Phone number": null,
   "Please wait for Nexus Core to start.": null,
@@ -344,7 +343,6 @@
   "Restart Core?": null,
   "Restarting Core...": null,
   "Restarting Nexus Core...": null,
-  "Rows": "행",
   "Sample Address": null,
   "Save changes": null,
   "Search address": null,
@@ -372,6 +370,7 @@
   "Sent": "전송 됨",
   "Set timeout for login": null,
   "Settings": "설정",
+  "Show transactions chart": null,
   "Source code": null,
   "Stake": null,
   "Stake Difficulty": null,
@@ -385,7 +384,6 @@
   "Style": "스타일",
   "Synchronized": "동기화 됨",
   "Synchronizing": "동기화 중",
-  "TX Number": "TX 번호",
   "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized": null,
   "The provided repository is not verified to be the real source code of this module": null,
   "The wallet will now be refreshed for the new module to take effect": null,
@@ -404,19 +402,22 @@
   "This repository does not exist or is private": null,
   "This repository is not verified to be the real source code of this module": null,
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": null,
+  "Time": null,
   "Time is required": null,
   "Time must be at least one hour in the future": null,
   "Time span": "시간 범위",
   "Time zone": null,
-  "Time: ": "시각: ",
   "To account": "계정에",
   "Toggle Developer Tools": null,
   "Toggle FullScreen": null,
   "Toggle Module's Developer Tools": null,
+  "Transaction ID": null,
   "Transaction details": "상세 거래 내역",
   "Transaction received": "거래 접수",
   "Transaction sent": "거래 송부",
   "Transactions": "업무",
+  "Transactions Details": null,
+  "Transactions chart": null,
   "Trust": "믿음",
   "Trust Weight": "신뢰 무게",
   "Trust transaction": "신탁 거래",
@@ -425,7 +426,6 @@
   "Turn module open source policy on?": null,
   "Turn policy off": null,
   "Twinkling stars": null,
-  "Type": "유형",
   "Unknown": null,
   "Unknown login status": null,
   "Unsupported file type": null,
@@ -442,7 +442,8 @@
   "View private key for address": "주소의 비공개 키보기",
   "Visit repository": null,
   "Volume": "음량",
-  "Waiting for average age of balance to exceed 72 hours...": null,
+  "Waiting for 100% synchronization to start staking...": null,
+  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
   "Wallet backed up": "월렛 백업 됨",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "월렛이 암호화되었습니다.",
@@ -460,5 +461,6 @@
   "Your computer does not support OPENGL 2.0": "Your computer does not support OPENGL 2.0",
   "Your wallet is not encrypted!": "월렛이 암호화되지 않았습니다!",
   "Your wallet password": null,
-  "or drag and drop it here": null
+  "or drag and drop it here": null,
+  "rows": null
 }
