--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -2,7 +2,6 @@
   "%{name}'s Address": "%{nazwy} Addresy",
   "%{name}'s Nexus address": "%{nazwa}y Adres Nexus",
   "%{smart_count} address |||| %{smart_count} addresses": null,
-  "(Pending)": "(Oczekuje)",
   "(This will restart your Core)": null,
   "24hr Change": "Różnica ceny w okresie 24 g.",
   "A contact with the same name already exists.": "Kontakt o tej nazwie juz istnieje.",
@@ -27,7 +26,6 @@
   "All Accounts": "Wszystkie Aktywności",
   "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": null,
   "Amount": "Kwota",
-  "Amount: ": "Kwota: ",
   "An unknown error occurred": " Nieznany błąd ",
   "Application": "Aplikacja",
   "Are you sure you want to abort the process?": null,
@@ -47,9 +45,8 @@
   "Backup wallet": "Kopia zapasowa portfela ",
   "Balance": "Stan",
   "Block Count": "Numer Bloku",
-  "Block Hash": "Hash Bloku",
-  "Block Number": "Numer Bloku",
   "Block Weight": "Waga Bloku",
+  "Block hash": null,
   "Bootstrap Recent Database": null,
   "Bootstrap process has been aborted": null,
   "Browse": "Przeglądaj",
@@ -60,6 +57,7 @@
   "Cannot find module": null,
   "Cannot install from that location": null,
   "Cannot move to the same account": "Nie można przesunąc srodków na to samo konto",
+  "Category": null,
   "Change password": "Zmień hasło",
   "Check for Updates...": null,
   "Check wallet": "Sprawdż portfel",
@@ -124,9 +122,9 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
-  "Download": "Pobierz",
   "Download Recent Database": null,
   "Download recent database?": null,
+  "Download transactions history": null,
   "Downloading": null,
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": null,
   "Downloading the database": null,
@@ -210,6 +208,8 @@
   "Last updated\n%{time}": null,
   "License Agreement": null,
   "Light": "Jasny",
+  "Loading transaction details...": null,
+  "Loading transactions": null,
   "Local Time": "Czas lokalny",
   "Log in now": "Zaloguj sie teraz",
   "Log out": "Wyloguj",
@@ -244,7 +244,6 @@
   "Module open source policy": "Moduł open source policy",
   "Module type": null,
   "Modules": "Moduły",
-  "More details": "Wiecej szczegółów",
   "Move NXS": "Przesuń NXS",
   "Move NXS between accounts": "Przesun NXS pomiędzy kontami",
   "Moving the database...": null,
@@ -290,7 +289,6 @@
   "Overview": "Przegląd",
   "Overview Display": "Widok ogólny",
   "Overwrite module?": null,
-  "PENDING TRANSACTION": "TRANSAKCJE OCZEKUJACE",
   "Page": "Strona",
   "Password": "Hasło",
   "Password cannot contain these characters:": "Hasło nie może zawierać tych znaków:",
@@ -304,6 +302,7 @@
   "Past Week": "Ostatni Tydzien",
   "Past Year": "Ostatni Rok",
   "Paste": "Wklej",
+  "Pending": null,
   "Phone Number": "Numer Telefonu",
   "Phone number": null,
   "Please wait for Nexus Core to start.": null,
@@ -344,7 +343,6 @@
   "Restart Core?": "Ta aktywność wymaga restartu.",
   "Restarting Core...": null,
   "Restarting Nexus Core...": "Restartowanie  daemona...",
-  "Rows": "Rzad",
   "Sample Address": null,
   "Save changes": "Zapisz zmiany",
   "Search address": null,
@@ -372,6 +370,7 @@
   "Sent": "Wyslij",
   "Set timeout for login": null,
   "Settings": "Ustawienia",
+  "Show transactions chart": null,
   "Source code": null,
   "Stake": "Stawka",
   "Stake Difficulty": "Trudność Stawki",
@@ -385,7 +384,6 @@
   "Style": "Styl",
   "Synchronized": "Zsynchronizowany",
   "Synchronizing": "Synchronizacja",
-  "TX Number": "Numer transakcji",
   "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized": null,
   "The provided repository is not verified to be the real source code of this module": null,
   "The wallet will now be refreshed for the new module to take effect": null,
@@ -404,19 +402,22 @@
   "This repository does not exist or is private": null,
   "This repository is not verified to be the real source code of this module": null,
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": "Czy chcesz zrobić to teraz??",
+  "Time": null,
   "Time is required": "Wymagane jest wpisanie czasu",
   "Time must be at least one hour in the future": "Czas z przynajmniej godzinnym wyprzedzeniem",
   "Time span": "Okres",
   "Time zone": null,
-  "Time: ": "Czas: ",
   "To account": "Na konto",
   "Toggle Developer Tools": null,
   "Toggle FullScreen": null,
   "Toggle Module's Developer Tools": null,
+  "Transaction ID": null,
   "Transaction details": "Szczegóły transakcji",
   "Transaction received": "Transakcja otrzymana ",
   "Transaction sent": "Transakcja wysłana",
   "Transactions": "Transakcje",
+  "Transactions Details": null,
+  "Transactions chart": null,
   "Trust": "Zaufanie",
   "Trust Weight": "Waga zaufania",
   "Trust transaction": " Transakcja Trust ",
@@ -425,7 +426,6 @@
   "Turn module open source policy on?": null,
   "Turn policy off": null,
   "Twinkling stars": "Migające gwiazdy",
-  "Type": "Rodzaj",
   "Unknown": "Nieznane",
   "Unknown login status": null,
   "Unsupported file type": null,
@@ -442,7 +442,8 @@
   "View private key for address": "Zobacz klucz prywatny odnoszący się do adresu",
   "Visit repository": null,
   "Volume": "Obrót",
-  "Waiting for average age of balance to exceed 72 hours...": null,
+  "Waiting for 100% synchronization to start staking...": null,
+  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
   "Wallet backed up": "Wykonano kopię zapasową",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "Portfel został zaszyfrowany.",
@@ -460,5 +461,6 @@
   "Your computer does not support OPENGL 2.0": "Twój komputer nie wspiera OPENGL 2.0",
   "Your wallet is not encrypted!": "Twój portfel nie jest zaszyfrowany",
   "Your wallet password": "Hasło twojego portfela",
-  "or drag and drop it here": null
+  "or drag and drop it here": null,
+  "rows": null
 }
