--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -2,7 +2,6 @@
   "%{name}'s Address": null,
   "%{name}'s Nexus address": null,
   "%{smart_count} address |||| %{smart_count} addresses": null,
-  "(Pending)": "(В ожидании)",
   "(This will restart your Core)": null,
   "24hr Change": "24 часа смены",
   "A contact with the same name already exists.": null,
@@ -27,7 +26,6 @@
   "All Accounts": "Все аккаунты",
   "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": null,
   "Amount": "Количество",
-  "Amount: ": "Количество",
   "An unknown error occurred": null,
   "Application": "заявка",
   "Are you sure you want to abort the process?": null,
@@ -47,9 +45,8 @@
   "Backup wallet": "Резервное копирование",
   "Balance": "Баланс",
   "Block Count": "Количество блоков",
-  "Block Hash": "Блочный хэш",
-  "Block Number": "Номер блока",
   "Block Weight": "Вес блока",
+  "Block hash": null,
   "Bootstrap Recent Database": null,
   "Bootstrap process has been aborted": null,
   "Browse": null,
@@ -60,6 +57,7 @@
   "Cannot find module": null,
   "Cannot install from that location": null,
   "Cannot move to the same account": null,
+  "Category": null,
   "Change password": "Изменить пароль",
   "Check for Updates...": null,
   "Check wallet": null,
@@ -124,9 +122,9 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
-  "Download": "Download",
   "Download Recent Database": null,
   "Download recent database?": null,
+  "Download transactions history": null,
   "Downloading": null,
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": null,
   "Downloading the database": null,
@@ -210,6 +208,8 @@
   "Last updated\n%{time}": null,
   "License Agreement": null,
   "Light": null,
+  "Loading transaction details...": null,
+  "Loading transactions": null,
   "Local Time": "Местное время",
   "Log in now": null,
   "Log out": null,
@@ -244,7 +244,6 @@
   "Module open source policy": null,
   "Module type": null,
   "Modules": null,
-  "More details": "Подробнее",
   "Move NXS": "Переместить NXS",
   "Move NXS between accounts": "Переместить NXS между счетами",
   "Moving the database...": null,
@@ -290,7 +289,6 @@
   "Overview": "обзор",
   "Overview Display": null,
   "Overwrite module?": null,
-  "PENDING TRANSACTION": "В ожидании сделки",
   "Page": "страница",
   "Password": "пароль",
   "Password cannot contain these characters:": null,
@@ -304,6 +302,7 @@
   "Past Week": "Past Week",
   "Past Year": "Past Year",
   "Paste": "Вставить",
+  "Pending": null,
   "Phone Number": "Номер телефона",
   "Phone number": null,
   "Please wait for Nexus Core to start.": null,
@@ -344,7 +343,6 @@
   "Restart Core?": null,
   "Restarting Core...": null,
   "Restarting Nexus Core...": null,
-  "Rows": "Ряды",
   "Sample Address": null,
   "Save changes": null,
   "Search address": null,
@@ -372,6 +370,7 @@
   "Sent": "Sent",
   "Set timeout for login": null,
   "Settings": "настройки",
+  "Show transactions chart": null,
   "Source code": null,
   "Stake": null,
   "Stake Difficulty": null,
@@ -385,7 +384,6 @@
   "Style": "Стиль",
   "Synchronized": "синхронизируется",
   "Synchronizing": "Синхронизации",
-  "TX Number": "TX Число",
   "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized": null,
   "The provided repository is not verified to be the real source code of this module": null,
   "The wallet will now be refreshed for the new module to take effect": null,
@@ -404,19 +402,22 @@
   "This repository does not exist or is private": null,
   "This repository is not verified to be the real source code of this module": null,
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": null,
+  "Time": null,
   "Time is required": null,
   "Time must be at least one hour in the future": null,
   "Time span": "Время",
   "Time zone": null,
-  "Time: ": "Время",
   "To account": "На счет",
   "Toggle Developer Tools": null,
   "Toggle FullScreen": null,
   "Toggle Module's Developer Tools": null,
+  "Transaction ID": null,
   "Transaction details": "Детали транзакции",
   "Transaction received": "Полученная транзакция",
   "Transaction sent": "Отправленная транзакция",
   "Transactions": "операции",
+  "Transactions Details": null,
+  "Transactions chart": null,
   "Trust": "Доверять",
   "Trust Weight": "Вес доверия",
   "Trust transaction": "Трастовая транзакция",
@@ -425,7 +426,6 @@
   "Turn module open source policy on?": null,
   "Turn policy off": null,
   "Twinkling stars": null,
-  "Type": "Тип",
   "Unknown": null,
   "Unknown login status": null,
   "Unsupported file type": null,
@@ -442,7 +442,8 @@
   "View private key for address": "Просмотр закрытого ключа для адреса",
   "Visit repository": null,
   "Volume": "объем",
-  "Waiting for average age of balance to exceed 72 hours...": null,
+  "Waiting for 100% synchronization to start staking...": null,
+  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
   "Wallet backed up": "Кошелек с резервными копиями",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "Кошелек зашифрован",
@@ -460,5 +461,6 @@
   "Your computer does not support OPENGL 2.0": "Your computer does not support OPENGL 2.0",
   "Your wallet is not encrypted!": "Ваш кошелек не зашифрован!",
   "Your wallet password": null,
-  "or drag and drop it here": null
+  "or drag and drop it here": null,
+  "rows": null
 }
