--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -2,7 +2,6 @@
   "%{name}'s Address": null,
   "%{name}'s Nexus address": null,
   "%{smart_count} address |||| %{smart_count} addresses": null,
-  "(Pending)": "(Ausstehend)",
   "(This will restart your Core)": null,
   "24hr Change": "Wertentwicklung 24h",
   "A contact with the same name already exists.": null,
@@ -27,7 +26,6 @@
   "All Accounts": "Alle Konten",
   "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": null,
   "Amount": "Betrag",
-  "Amount: ": "Betrag: ",
   "An unknown error occurred": "Ein unbekannter Fehler ist aufgetreten",
   "Application": "Anwendung",
   "Are you sure you want to abort the process?": null,
@@ -47,9 +45,8 @@
   "Backup wallet": "Sicherung der Wallet erstellen",
   "Balance": "Kontostand",
   "Block Count": "Blockhöhe",
-  "Block Hash": "Block Hash",
-  "Block Number": "Blocknummer",
   "Block Weight": "Block Faktor",
+  "Block hash": null,
   "Bootstrap Recent Database": null,
   "Bootstrap process has been aborted": null,
   "Browse": "Suchen",
@@ -60,6 +57,7 @@
   "Cannot find module": null,
   "Cannot install from that location": null,
   "Cannot move to the same account": "Kann nicht auf das gleiche Konto überwiesen werden",
+  "Category": null,
   "Change password": "Ändern Sie das Passwort",
   "Check for Updates...": null,
   "Check wallet": null,
@@ -124,9 +122,9 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
-  "Download": "Herunterladen",
   "Download Recent Database": null,
   "Download recent database?": null,
+  "Download transactions history": null,
   "Downloading": null,
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": null,
   "Downloading the database": null,
@@ -210,6 +208,8 @@
   "Last updated\n%{time}": null,
   "License Agreement": null,
   "Light": "Light",
+  "Loading transaction details...": null,
+  "Loading transactions": null,
   "Local Time": "Ortszeit",
   "Log in now": "Jetzt einloggen",
   "Log out": "Ausloggen",
@@ -244,7 +244,6 @@
   "Module open source policy": null,
   "Module type": null,
   "Modules": null,
-  "More details": "Mehr Details",
   "Move NXS": "Jetzt Übertragen",
   "Move NXS between accounts": "Eigenübertrag zwischen den Konten",
   "Moving the database...": null,
@@ -290,7 +289,6 @@
   "Overview": "Überblick",
   "Overview Display": null,
   "Overwrite module?": null,
-  "PENDING TRANSACTION": "AUSSTEHENDE TRANSAKTION",
   "Page": "Seite",
   "Password": "Passwort",
   "Password cannot contain these characters:": "Passwort darf folgende Zeichen nicht enthalten:",
@@ -304,6 +302,7 @@
   "Past Week": "Letzte Woche",
   "Past Year": "Letztes Jahr",
   "Paste": "Einfügen",
+  "Pending": null,
   "Phone Number": "Telefonnummer",
   "Phone number": null,
   "Please wait for Nexus Core to start.": null,
@@ -344,7 +343,6 @@
   "Restart Core?": null,
   "Restarting Core...": null,
   "Restarting Nexus Core...": "Starte Daemon neu...",
-  "Rows": "Zeilen",
   "Sample Address": null,
   "Save changes": null,
   "Search address": null,
@@ -372,6 +370,7 @@
   "Sent": "Versendet",
   "Set timeout for login": null,
   "Settings": "Einstellungen",
+  "Show transactions chart": null,
   "Source code": null,
   "Stake": null,
   "Stake Difficulty": null,
@@ -385,7 +384,6 @@
   "Style": "Design",
   "Synchronized": "Synchronisiert",
   "Synchronizing": "Synchronisiere",
-  "TX Number": "TX Nummer",
   "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized": null,
   "The provided repository is not verified to be the real source code of this module": null,
   "The wallet will now be refreshed for the new module to take effect": null,
@@ -404,19 +402,22 @@
   "This repository does not exist or is private": null,
   "This repository is not verified to be the real source code of this module": null,
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": null,
+  "Time": null,
   "Time is required": "Uhrzeit erforderlich",
   "Time must be at least one hour in the future": null,
   "Time span": "ZEITPUNKT",
   "Time zone": null,
-  "Time: ": "Uhrzeit: ",
   "To account": "Zum Konto",
   "Toggle Developer Tools": null,
   "Toggle FullScreen": null,
   "Toggle Module's Developer Tools": null,
+  "Transaction ID": null,
   "Transaction details": "Details zu den Transaktionen",
   "Transaction received": "Transaktion empfangen",
   "Transaction sent": "Transaktion gesendet",
   "Transactions": "Transaktionen",
+  "Transactions Details": null,
+  "Transactions chart": null,
   "Trust": "Trust",
   "Trust Weight": "Trust Faktor",
   "Trust transaction": "Trust Transaktion",
@@ -425,7 +426,6 @@
   "Turn module open source policy on?": null,
   "Turn policy off": null,
   "Twinkling stars": "Sternenhimmel",
-  "Type": "Transaktionen",
   "Unknown": null,
   "Unknown login status": null,
   "Unsupported file type": null,
@@ -442,7 +442,8 @@
   "View private key for address": "Den Private Key für diese Adresse anzeigen",
   "Visit repository": null,
   "Volume": "Volumen",
-  "Waiting for average age of balance to exceed 72 hours...": null,
+  "Waiting for 100% synchronization to start staking...": null,
+  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
   "Wallet backed up": "Wallet gesichert",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "Die Wallet wurde verschlüsselt",
@@ -460,5 +461,6 @@
   "Your computer does not support OPENGL 2.0": "Ihr Computer unterstützt OPENGL 2.0 nicht",
   "Your wallet is not encrypted!": "Ihre Wallet ist nicht verschlüsselt!",
   "Your wallet password": "Ihr Wallet Passwort",
-  "or drag and drop it here": null
+  "or drag and drop it here": null,
+  "rows": null
 }
