--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -2,7 +2,6 @@
   "%{name}'s Address": "%{name}'s Address",
   "%{name}'s Nexus address": "%{name}'s Nexus address",
   "%{smart_count} address |||| %{smart_count} addresses": "%{smart_count} address |||| %{smart_count} addresses",
-  "(Pending)": "(Pending)",
   "(This will restart your Core)": "(This will restart your Core)",
   "24hr Change": "24hr Change",
   "A contact with the same name already exists.": "A contact with the same name already exists.",
@@ -27,7 +26,6 @@
   "All Accounts": "All Accounts",
   "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.",
   "Amount": "Amount",
-  "Amount: ": "Amount: ",
   "An unknown error occurred": "An unknown error occurred",
   "Application": "Application",
   "Are you sure you want to abort the process?": "Are you sure you want to abort the process?",
@@ -47,9 +45,8 @@
   "Backup wallet": "Backup wallet",
   "Balance": "Balance",
   "Block Count": "Block Count",
-  "Block Hash": "Block Hash",
-  "Block Number": "Block Number",
   "Block Weight": "Block Weight",
+  "Block hash": "Block hash",
   "Bootstrap Recent Database": "Bootstrap Recent Database",
   "Bootstrap process has been aborted": "Bootstrap process has been aborted",
   "Browse": "Browse",
@@ -60,6 +57,7 @@
   "Cannot find module": "Cannot find module",
   "Cannot install from that location": "Cannot install from that location",
   "Cannot move to the same account": "Cannot move to the same account",
+  "Category": "Category",
   "Change password": "Change password",
   "Check for Updates...": "Check for Updates...",
   "Check wallet": "Check wallet",
@@ -124,9 +122,9 @@
   "Dismiss": "Dismiss",
   "Display Test Transactions on the Transactions page": "Display Test Transactions on the Transactions page",
   "Display name": "Display name",
-  "Download": "Download",
   "Download Recent Database": "Download Recent Database",
   "Download recent database?": "Download recent database?",
+  "Download transactions history": "Download transactions history",
   "Downloading": "Downloading",
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet",
   "Downloading the database": "Downloading the database",
@@ -210,6 +208,8 @@
   "Last updated\n%{time}": "Last updated\n%{time}",
   "License Agreement": "License Agreement",
   "Light": "Light",
+  "Loading transaction details...": "Loading transaction details...",
+  "Loading transactions": "Loading transactions",
   "Local Time": "Local Time",
   "Log in now": "Log in now",
   "Log out": "Log out",
@@ -244,7 +244,6 @@
   "Module open source policy": "Module open source policy",
   "Module type": "Module type",
   "Modules": "Modules",
-  "More details": "More details",
   "Move NXS": "Move NXS",
   "Move NXS between accounts": "Move NXS between accounts",
   "Moving the database...": "Moving the database...",
@@ -290,7 +289,6 @@
   "Overview": "Overview",
   "Overview Display": "Overview Display",
   "Overwrite module?": "Overwrite module?",
-  "PENDING TRANSACTION": "PENDING TRANSACTION",
   "Page": "Page",
   "Password": "Password",
   "Password cannot contain these characters:": "Password cannot contain these characters:",
@@ -304,6 +302,7 @@
   "Past Week": "Past Week",
   "Past Year": "Past Year",
   "Paste": "Paste",
+  "Pending": "Pending",
   "Phone Number": "Phone Number",
   "Phone number": "Phone number",
   "Please wait for Nexus Core to start.": "Please wait for Nexus Core to start.",
@@ -344,7 +343,6 @@
   "Restart Core?": "Restart Core?",
   "Restarting Core...": "Restarting Core...",
   "Restarting Nexus Core...": "Restarting Nexus Core...",
-  "Rows": "Rows",
   "Sample Address": "Sample Address",
   "Save changes": "Save changes",
   "Search address": "Search address",
@@ -372,6 +370,7 @@
   "Sent": "Sent",
   "Set timeout for login": "Set timeout for login",
   "Settings": "Settings",
+  "Show transactions chart": "Show transactions chart",
   "Source code": "Source code",
   "Stake": "Stake",
   "Stake Difficulty": "Stake Difficulty",
@@ -385,7 +384,6 @@
   "Style": "Style",
   "Synchronized": "Synchronized",
   "Synchronizing": "Synchronizing",
-  "TX Number": "TX Number",
   "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized": "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized",
   "The provided repository is not verified to be the real source code of this module": "The provided repository is not verified to be the real source code of this module",
   "The wallet will now be refreshed for the new module to take effect": "The wallet will now be refreshed for the new module to take effect",
@@ -404,19 +402,22 @@
   "This repository does not exist or is private": "This repository does not exist or is private",
   "This repository is not verified to be the real source code of this module": "This repository is not verified to be the real source code of this module",
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?",
+  "Time": "Time",
   "Time is required": "Time is required",
   "Time must be at least one hour in the future": "Time must be at least one hour in the future",
   "Time span": "Time span",
   "Time zone": "Time zone",
-  "Time: ": "Time: ",
   "To account": "To account",
   "Toggle Developer Tools": "Toggle Developer Tools",
   "Toggle FullScreen": "Toggle FullScreen",
   "Toggle Module's Developer Tools": "Toggle Module's Developer Tools",
+  "Transaction ID": "Transaction ID",
   "Transaction details": "Transaction details",
   "Transaction received": "Transaction received",
   "Transaction sent": "Transaction sent",
   "Transactions": "Transactions",
+  "Transactions Details": "Transactions Details",
+  "Transactions chart": "Transactions chart",
   "Trust": "Trust",
   "Trust Weight": "Trust Weight",
   "Trust transaction": "Trust transaction",
@@ -425,7 +426,6 @@
   "Turn module open source policy on?": "Turn module open source policy on?",
   "Turn policy off": "Turn policy off",
   "Twinkling stars": "Twinkling stars",
-  "Type": "Type",
   "Unknown": "Unknown",
   "Unknown login status": "Unknown login status",
   "Unsupported file type": "Unsupported file type",
@@ -442,7 +442,8 @@
   "View private key for address": "View private key for address",
   "Visit repository": "Visit repository",
   "Volume": "Volume",
-  "Waiting for average age of balance to exceed 72 hours...": "Waiting for average age of balance to exceed 72 hours...",
+  "Waiting for 100% synchronization to start staking...": "Waiting for 100% synchronization to start staking...",
+  "Waiting for average age of balance to exceed 72 hours to start staking...": "Waiting for average age of balance to exceed 72 hours to start staking...",
   "Wallet backed up": "Wallet backed up",
   "Wallet has been backed up": "Wallet has been backed up",
   "Wallet has been encrypted.": "Wallet has been encrypted.",
@@ -460,5 +461,6 @@
   "Your computer does not support OPENGL 2.0": "Your computer does not support OPENGL 2.0",
   "Your wallet is not encrypted!": "Your wallet is not encrypted!",
   "Your wallet password": "Your wallet password",
-  "or drag and drop it here": "or drag and drop it here"
+  "or drag and drop it here": "or drag and drop it here",
+  "rows": "rows"
 }
