--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -2,7 +2,6 @@
   "%{name}'s Address": "Dirección de %{nombre}",
   "%{name}'s Nexus address": "la dirección Nexus de %{name}",
   "%{smart_count} address |||| %{smart_count} addresses": null,
-  "(Pending)": "(Pendiente)",
   "(This will restart your Core)": null,
   "24hr Change": "24hr Change",
   "A contact with the same name already exists.": "Ya existe un contacto con el mismo nombre.",
@@ -27,7 +26,6 @@
   "All Accounts": "Todas las cuentas",
   "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": null,
   "Amount": "Cantidad",
-  "Amount: ": "Cantidad:",
   "An unknown error occurred": "Se produjo un error desconocido",
   "Application": "Aplicación",
   "Are you sure you want to abort the process?": null,
@@ -47,9 +45,8 @@
   "Backup wallet": "Monedero de respaldo",
   "Balance": "Saldo",
   "Block Count": "Block Count",
-  "Block Hash": "Bloque Hash",
-  "Block Number": "Número de bloque",
   "Block Weight": "Block Weight",
+  "Block hash": null,
   "Bootstrap Recent Database": null,
   "Bootstrap process has been aborted": null,
   "Browse": "Browse",
@@ -60,6 +57,7 @@
   "Cannot find module": null,
   "Cannot install from that location": null,
   "Cannot move to the same account": "No se puede mover a la misma cuenta",
+  "Category": null,
   "Change password": "Cambiar contraseña",
   "Check for Updates...": null,
   "Check wallet": "Revisar billetera",
@@ -124,9 +122,9 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": "Mostrar transacciones de prueba en la página Transacciones",
   "Display name": null,
-  "Download": "Descargar",
   "Download Recent Database": null,
   "Download recent database?": null,
+  "Download transactions history": null,
   "Downloading": null,
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": null,
   "Downloading the database": null,
@@ -210,6 +208,8 @@
   "Last updated\n%{time}": null,
   "License Agreement": null,
   "Light": "Light",
+  "Loading transaction details...": null,
+  "Loading transactions": null,
   "Local Time": "Hora local",
   "Log in now": "Inicie sesión ahora",
   "Log out": "Cerrar sesión",
@@ -244,7 +244,6 @@
   "Module open source policy": "Política de código abierto del módulo",
   "Module type": null,
   "Modules": "Módulos",
-  "More details": "Más detalles",
   "Move NXS": "Mover NXS",
   "Move NXS between accounts": "Mover NXS entre cuentas",
   "Moving the database...": null,
@@ -290,7 +289,6 @@
   "Overview": "Información general",
   "Overview Display": "Visualization general",
   "Overwrite module?": null,
-  "PENDING TRANSACTION": "TRANSACCIÓN PENDIENTE",
   "Page": "Página",
   "Password": "Contraseña",
   "Password cannot contain these characters:": "La contraseña no puede contener estos caracteres:",
@@ -304,6 +302,7 @@
   "Past Week": "Semana pasada",
   "Past Year": "El año pasado",
   "Paste": "Pegar",
+  "Pending": null,
   "Phone Number": "Número de teléfono",
   "Phone number": null,
   "Please wait for Nexus Core to start.": null,
@@ -344,7 +343,6 @@
   "Restart Core?": "¿Reiniciar el núcleo?",
   "Restarting Core...": null,
   "Restarting Nexus Core...": "Reiniciando el demonio ...",
-  "Rows": "Filas",
   "Sample Address": null,
   "Save changes": "Guardar cambios",
   "Search address": null,
@@ -372,6 +370,7 @@
   "Sent": "Enviado",
   "Set timeout for login": null,
   "Settings": "Configuración",
+  "Show transactions chart": null,
   "Source code": null,
   "Stake": "Estaca",
   "Stake Difficulty": "Dificultad Stake",
@@ -385,7 +384,6 @@
   "Style": "Estilo",
   "Synchronized": "Sincronizado",
   "Synchronizing": "Sincronización",
-  "TX Number": "TX Número",
   "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized": null,
   "The provided repository is not verified to be the real source code of this module": null,
   "The wallet will now be refreshed for the new module to take effect": null,
@@ -404,19 +402,22 @@
   "This repository does not exist or is private": null,
   "This repository is not verified to be the real source code of this module": null,
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": "Este cambio de configuración solo tendrá efecto después de que se reinicie el núcleo. ¿Desea reiniciar el núcleo ahora?",
+  "Time": null,
   "Time is required": "Se necesita indicar hora",
   "Time must be at least one hour in the future": "El tiempo debe ser al menos una hora a mais",
   "Time span": null,
   "Time zone": null,
-  "Time: ": "Hora:",
   "To account": "A la cuenta",
   "Toggle Developer Tools": null,
   "Toggle FullScreen": null,
   "Toggle Module's Developer Tools": null,
+  "Transaction ID": null,
   "Transaction details": "Detalles de la transacción",
   "Transaction received": null,
   "Transaction sent": "Transacción enviada",
   "Transactions": "Transacciones",
+  "Transactions Details": null,
+  "Transactions chart": null,
   "Trust": "Fidelidad",
   "Trust Weight": "Trust Weight",
   "Trust transaction": "Transacción de Fidelidad",
@@ -425,7 +426,6 @@
   "Turn module open source policy on?": null,
   "Turn policy off": null,
   "Twinkling stars": "Twinkling stars",
-  "Type": "Tipo",
   "Unknown": "Desconocido",
   "Unknown login status": null,
   "Unsupported file type": null,
@@ -442,7 +442,8 @@
   "View private key for address": "Ver la clave privada para la dirección",
   "Visit repository": null,
   "Volume": "Volumen",
-  "Waiting for average age of balance to exceed 72 hours...": null,
+  "Waiting for 100% synchronization to start staking...": null,
+  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
   "Wallet backed up": "Copia de seguridad de la cartera",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "La billetera se ha cifrado.",
@@ -460,5 +461,6 @@
   "Your computer does not support OPENGL 2.0": "Su computadora no es compatible con OPENGL 2.0",
   "Your wallet is not encrypted!": "¡Su billetera no está encriptada!",
   "Your wallet password": "Su contraseña de billetera",
-  "or drag and drop it here": null
+  "or drag and drop it here": null,
+  "rows": null
 }
