--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -2,7 +2,6 @@
   "%{name}'s Address": null,
   "%{name}'s Nexus address": null,
   "%{smart_count} address |||| %{smart_count} addresses": null,
-  "(Pending)": "（保留中)",
   "(This will restart your Core)": null,
   "24hr Change": "24時間の変更",
   "A contact with the same name already exists.": null,
@@ -27,7 +26,6 @@
   "All Accounts": "すべてのアカウント",
   "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": null,
   "Amount": "量",
-  "Amount: ": "量: ",
   "An unknown error occurred": null,
   "Application": "応用",
   "Are you sure you want to abort the process?": null,
@@ -47,9 +45,8 @@
   "Backup wallet": "バックアップウォレット",
   "Balance": "バランス",
   "Block Count": "ブロックカウント",
-  "Block Hash": "ブロックハッシュ",
-  "Block Number": "ブロック番号",
   "Block Weight": "ブロック重量",
+  "Block hash": null,
   "Bootstrap Recent Database": null,
   "Bootstrap process has been aborted": null,
   "Browse": null,
@@ -60,6 +57,7 @@
   "Cannot find module": null,
   "Cannot install from that location": null,
   "Cannot move to the same account": null,
+  "Category": null,
   "Change password": "パスワードを変更する",
   "Check for Updates...": null,
   "Check wallet": null,
@@ -124,9 +122,9 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
-  "Download": "ダウンロード",
   "Download Recent Database": null,
   "Download recent database?": null,
+  "Download transactions history": null,
   "Downloading": null,
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": null,
   "Downloading the database": null,
@@ -210,6 +208,8 @@
   "Last updated\n%{time}": null,
   "License Agreement": null,
   "Light": null,
+  "Loading transaction details...": null,
+  "Loading transactions": null,
   "Local Time": "現地時間",
   "Log in now": null,
   "Log out": null,
@@ -244,7 +244,6 @@
   "Module open source policy": null,
   "Module type": null,
   "Modules": null,
-  "More details": "詳細",
   "Move NXS": "NXS を動かす",
   "Move NXS between accounts": "アカウント間の移動",
   "Moving the database...": null,
@@ -290,7 +289,6 @@
   "Overview": "概要",
   "Overview Display": null,
   "Overwrite module?": null,
-  "PENDING TRANSACTION": "保留中の取引",
   "Page": "ページ",
   "Password": "パスワード",
   "Password cannot contain these characters:": null,
@@ -304,6 +302,7 @@
   "Past Week": "この1週間",
   "Past Year": "過去の年",
   "Paste": "ペースト",
+  "Pending": null,
   "Phone Number": "電話番号",
   "Phone number": null,
   "Please wait for Nexus Core to start.": null,
@@ -344,7 +343,6 @@
   "Restart Core?": null,
   "Restarting Core...": null,
   "Restarting Nexus Core...": null,
-  "Rows": "行",
   "Sample Address": null,
   "Save changes": null,
   "Search address": null,
@@ -372,6 +370,7 @@
   "Sent": "送信済み",
   "Set timeout for login": null,
   "Settings": "設定",
+  "Show transactions chart": null,
   "Source code": null,
   "Stake": null,
   "Stake Difficulty": null,
@@ -385,7 +384,6 @@
   "Style": "スタイル",
   "Synchronized": "同期された",
   "Synchronizing": "同期",
-  "TX Number": "TX 数",
   "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized": null,
   "The provided repository is not verified to be the real source code of this module": null,
   "The wallet will now be refreshed for the new module to take effect": null,
@@ -404,19 +402,22 @@
   "This repository does not exist or is private": null,
   "This repository is not verified to be the real source code of this module": null,
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": null,
+  "Time": null,
   "Time is required": null,
   "Time must be at least one hour in the future": null,
   "Time span": "期間",
   "Time zone": null,
-  "Time: ": "時間: ",
   "To account": "アカウントへ",
   "Toggle Developer Tools": null,
   "Toggle FullScreen": null,
   "Toggle Module's Developer Tools": null,
+  "Transaction ID": null,
   "Transaction details": "取引の詳細",
   "Transaction received": "トランザクションの受領",
   "Transaction sent": "トランザクション送信済み",
   "Transactions": "トランザクション",
+  "Transactions Details": null,
+  "Transactions chart": null,
   "Trust": "信頼",
   "Trust Weight": "信頼の重み ",
   "Trust transaction": "トラスト取引",
@@ -425,7 +426,6 @@
   "Turn module open source policy on?": null,
   "Turn policy off": null,
   "Twinkling stars": null,
-  "Type": "タイプ",
   "Unknown": null,
   "Unknown login status": null,
   "Unsupported file type": null,
@@ -442,7 +442,8 @@
   "View private key for address": "アドレスの秘密鍵を表示する",
   "Visit repository": null,
   "Volume": "量",
-  "Waiting for average age of balance to exceed 72 hours...": null,
+  "Waiting for 100% synchronization to start staking...": null,
+  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
   "Wallet backed up": "ウォレットのバックアップ",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "ウォレットは暗号化されています",
@@ -460,5 +461,6 @@
   "Your computer does not support OPENGL 2.0": "Your computer does not support OPENGL 2.0",
   "Your wallet is not encrypted!": "あなたのウォレットは暗号化されていません！",
   "Your wallet password": null,
-  "or drag and drop it here": null
+  "or drag and drop it here": null,
+  "rows": null
 }
