--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -2,7 +2,6 @@
   "%{name}'s Address": null,
   "%{name}'s Nexus address": null,
   "%{smart_count} address |||| %{smart_count} addresses": null,
-  "(Pending)": "(In afwachting)",
   "(This will restart your Core)": null,
   "24hr Change": "24hr verandering",
   "A contact with the same name already exists.": null,
@@ -27,7 +26,6 @@
   "All Accounts": "Alle Accounts",
   "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": null,
   "Amount": "Hoeveelheid",
-  "Amount: ": "Bedrag: ",
   "An unknown error occurred": null,
   "Application": "Applicatie",
   "Are you sure you want to abort the process?": null,
@@ -47,9 +45,8 @@
   "Backup wallet": "Backup portemonnee",
   "Balance": "Balans",
   "Block Count": "Block Totaal",
-  "Block Hash": "Block Hash",
-  "Block Number": "Block Nummer",
   "Block Weight": "Block Gewicht",
+  "Block hash": null,
   "Bootstrap Recent Database": null,
   "Bootstrap process has been aborted": null,
   "Browse": "Blader",
@@ -60,6 +57,7 @@
   "Cannot find module": null,
   "Cannot install from that location": null,
   "Cannot move to the same account": null,
+  "Category": null,
   "Change password": "Wachtwoord Veranderen",
   "Check for Updates...": null,
   "Check wallet": null,
@@ -124,9 +122,9 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": null,
   "Display name": null,
-  "Download": "Download",
   "Download Recent Database": null,
   "Download recent database?": null,
+  "Download transactions history": null,
   "Downloading": null,
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": null,
   "Downloading the database": null,
@@ -210,6 +208,8 @@
   "Last updated\n%{time}": null,
   "License Agreement": null,
   "Light": null,
+  "Loading transaction details...": null,
+  "Loading transactions": null,
   "Local Time": "Locale Tijd",
   "Log in now": null,
   "Log out": null,
@@ -244,7 +244,6 @@
   "Module open source policy": null,
   "Module type": null,
   "Modules": null,
-  "More details": "Meer Details",
   "Move NXS": "Verzend NXS",
   "Move NXS between accounts": "Verzend NXS tussen accounts",
   "Moving the database...": null,
@@ -290,7 +289,6 @@
   "Overview": "Overzicht",
   "Overview Display": null,
   "Overwrite module?": null,
-  "PENDING TRANSACTION": "TRANSACTIES IN WACHT",
   "Page": "Pagina",
   "Password": "Wachtwoord",
   "Password cannot contain these characters:": null,
@@ -304,6 +302,7 @@
   "Past Week": "Vorige Week",
   "Past Year": "Vorig jaar",
   "Paste": "Plakken",
+  "Pending": null,
   "Phone Number": "Telefoon nummer",
   "Phone number": null,
   "Please wait for Nexus Core to start.": null,
@@ -344,7 +343,6 @@
   "Restart Core?": null,
   "Restarting Core...": null,
   "Restarting Nexus Core...": null,
-  "Rows": "Rijen",
   "Sample Address": null,
   "Save changes": null,
   "Search address": null,
@@ -372,6 +370,7 @@
   "Sent": "Verzenden",
   "Set timeout for login": null,
   "Settings": "Instellingen",
+  "Show transactions chart": null,
   "Source code": null,
   "Stake": null,
   "Stake Difficulty": null,
@@ -385,7 +384,6 @@
   "Style": "Stijl",
   "Synchronized": "Gesynchroniseerd",
   "Synchronizing": "Synchroniseren",
-  "TX Number": "TX Nummer",
   "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized": null,
   "The provided repository is not verified to be the real source code of this module": null,
   "The wallet will now be refreshed for the new module to take effect": null,
@@ -404,19 +402,22 @@
   "This repository does not exist or is private": null,
   "This repository is not verified to be the real source code of this module": null,
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": null,
+  "Time": null,
   "Time is required": null,
   "Time must be at least one hour in the future": null,
   "Time span": "Tijdspanne",
   "Time zone": null,
-  "Time: ": "Tijd: ",
   "To account": "Naar Account",
   "Toggle Developer Tools": null,
   "Toggle FullScreen": null,
   "Toggle Module's Developer Tools": null,
+  "Transaction ID": null,
   "Transaction details": "Transactie Details",
   "Transaction received": "Transactie Ontvangen",
   "Transaction sent": "Transacti Verzonden",
   "Transactions": "Transacties",
+  "Transactions Details": null,
+  "Transactions chart": null,
   "Trust": "Trust",
   "Trust Weight": "Trust Gewicht",
   "Trust transaction": "Trust Transactie",
@@ -425,7 +426,6 @@
   "Turn module open source policy on?": null,
   "Turn policy off": null,
   "Twinkling stars": null,
-  "Type": "Type",
   "Unknown": null,
   "Unknown login status": null,
   "Unsupported file type": null,
@@ -442,7 +442,8 @@
   "View private key for address": "Bekijk privésleutel voor adres",
   "Visit repository": null,
   "Volume": "Volume",
-  "Waiting for average age of balance to exceed 72 hours...": null,
+  "Waiting for 100% synchronization to start staking...": null,
+  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
   "Wallet backed up": "Backup van Portemonnee gelukt",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "Portemonnee werd versleuteld",
@@ -460,5 +461,6 @@
   "Your computer does not support OPENGL 2.0": "Uw computer ondersteunt OPENGL 2.0 niet",
   "Your wallet is not encrypted!": "Uw portemonnee is niet gecodeerd!",
   "Your wallet password": null,
-  "or drag and drop it here": null
+  "or drag and drop it here": null,
+  "rows": null
 }
