--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -2,7 +2,6 @@
   "%{name}'s Address": "Endereço do %{nome}",
   "%{name}'s Nexus address": "endereço das Nexus do %{nome}",
   "%{smart_count} address |||| %{smart_count} addresses": null,
-  "(Pending)": "(Pendente)",
   "(This will restart your Core)": null,
   "24hr Change": "Mudança nas 24hrs ",
   "A contact with the same name already exists.": "Já existe um contato com o mesmo nome",
@@ -27,7 +26,6 @@
   "All Accounts": "Todas as contas",
   "All modules without open source verifications, possibly including your own under-development modules, will become invalid. Wallet must be refreshed for the change to take effect.": null,
   "Amount": "Quantidade",
-  "Amount: ": "Valor:",
   "An unknown error occurred": "Ocorreu um erro desconhecido",
   "Application": "Aplicação",
   "Are you sure you want to abort the process?": null,
@@ -47,9 +45,8 @@
   "Backup wallet": "Carteira de recuperamento",
   "Balance": "Saldo",
   "Block Count": "Contagem de blocos",
-  "Block Hash": "Bloquear hash",
-  "Block Number": "Bloco número",
   "Block Weight": "Block Weight",
+  "Block hash": null,
   "Bootstrap Recent Database": null,
   "Bootstrap process has been aborted": null,
   "Browse": null,
@@ -60,6 +57,7 @@
   "Cannot find module": null,
   "Cannot install from that location": null,
   "Cannot move to the same account": "Não é possível mover para a mesma conta",
+  "Category": null,
   "Change password": "Alterar senha",
   "Check for Updates...": null,
   "Check wallet": "Verificar carteira",
@@ -124,9 +122,9 @@
   "Dismiss": null,
   "Display Test Transactions on the Transactions page": "Exibir transações de teste na página Transações",
   "Display name": null,
-  "Download": "Descarregar",
   "Download Recent Database": null,
   "Download recent database?": null,
+  "Download transactions history": null,
   "Downloading": null,
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": null,
   "Downloading the database": null,
@@ -210,6 +208,8 @@
   "Last updated\n%{time}": null,
   "License Agreement": null,
   "Light": "Claro",
+  "Loading transaction details...": null,
+  "Loading transactions": null,
   "Local Time": "Hora Local",
   "Log in now": "Conetar agora",
   "Log out": "Sair",
@@ -244,7 +244,6 @@
   "Module open source policy": "Política de código aberto do módulo",
   "Module type": null,
   "Modules": "Módulos",
-  "More details": "Mais detalhes",
   "Move NXS": "Mova NXS",
   "Move NXS between accounts": "Mover as NXS entre contas",
   "Moving the database...": null,
@@ -290,7 +289,6 @@
   "Overview": "Visão geral",
   "Overview Display": "Exibição de visão geral",
   "Overwrite module?": null,
-  "PENDING TRANSACTION": "TRANSAÇãO PENDENTE",
   "Page": "Página",
   "Password": "Senha",
   "Password cannot contain these characters:": "A senha não pode conter estes caracteres:",
@@ -304,6 +302,7 @@
   "Past Week": "Semana passada",
   "Past Year": "Ano passado",
   "Paste": "Colar",
+  "Pending": null,
   "Phone Number": "Número de Telefone",
   "Phone number": null,
   "Please wait for Nexus Core to start.": null,
@@ -344,7 +343,6 @@
   "Restart Core?": "Reiniciar o núcleo?",
   "Restarting Core...": null,
   "Restarting Nexus Core...": "A reiniciar o daemon...",
-  "Rows": "Linhas",
   "Sample Address": null,
   "Save changes": "Salvar alterações",
   "Search address": null,
@@ -372,6 +370,7 @@
   "Sent": "Enviado",
   "Set timeout for login": null,
   "Settings": "Configurações",
+  "Show transactions chart": null,
   "Source code": null,
   "Stake": "Stake",
   "Stake Difficulty": "Dificuldade Stake",
@@ -385,7 +384,6 @@
   "Style": "Estilo",
   "Synchronized": "Sincronizado",
   "Synchronizing": "Sincronizando",
-  "TX Number": "Número TX",
   "The balance displayed might not be up-to-date since the wallet is not yet fully synchronized": null,
   "The provided repository is not verified to be the real source code of this module": null,
   "The wallet will now be refreshed for the new module to take effect": null,
@@ -404,19 +402,22 @@
   "This repository does not exist or is private": null,
   "This repository is not verified to be the real source code of this module": null,
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": "Esta alteração de configuração só terá efeito depois que o núcleo for reiniciado. Deseja reiniciar o núcleo agora?",
+  "Time": null,
   "Time is required": "Tempo é necessário",
   "Time must be at least one hour in the future": "O tempo deve ser de pelo menos uma hora no futuro",
   "Time span": "Intervalo de tempo",
   "Time zone": null,
-  "Time: ": "Tempo:",
   "To account": "Para a conta",
   "Toggle Developer Tools": null,
   "Toggle FullScreen": null,
   "Toggle Module's Developer Tools": null,
+  "Transaction ID": null,
   "Transaction details": "Detalhes da transação",
   "Transaction received": "Transação recebida",
   "Transaction sent": "Transação enviada",
   "Transactions": "Transações",
+  "Transactions Details": null,
+  "Transactions chart": null,
   "Trust": "Confiança",
   "Trust Weight": "Trust Weight",
   "Trust transaction": "Transação de confiança",
@@ -425,7 +426,6 @@
   "Turn module open source policy on?": null,
   "Turn policy off": null,
   "Twinkling stars": "Twinkling stars",
-  "Type": "Escreva",
   "Unknown": "Desconhecido",
   "Unknown login status": null,
   "Unsupported file type": null,
@@ -442,7 +442,8 @@
   "View private key for address": "Ver chave privada para endereço",
   "Visit repository": null,
   "Volume": "Volume",
-  "Waiting for average age of balance to exceed 72 hours...": null,
+  "Waiting for 100% synchronization to start staking...": null,
+  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
   "Wallet backed up": "Cópia de segurança da carteira",
   "Wallet has been backed up": null,
   "Wallet has been encrypted.": "A carteira foi criptografada",
@@ -460,5 +461,6 @@
   "Your computer does not support OPENGL 2.0": "Seu computador não suporta OPENGL 2.0",
   "Your wallet is not encrypted!": "Sua carteira não está criptografada!",
   "Your wallet password": "Sua senha da carteira",
-  "or drag and drop it here": null
+  "or drag and drop it here": null,
+  "rows": null
 }
