updated translation strings
Former-commit-id: 895a78b82a9ebf2c47d917421e00af358277a662

--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -76,6 +76,7 @@
   "Closing Nexus Wallet": "Nexus schließen",
   "Color scheme": "Farbschema",
   "Color scheme has been reset to default": "Das Farbschema wurde zurückgesetzt",
+  "Confirm": null,
   "Confirm password": "Passwort bestätigen",
   "Confirmations": "Bestätigungen",
   "Connecting to Nexus Core": "Wallet wird geladen, bitte warten",
@@ -146,6 +147,7 @@
   "Enter console commands here (ex: getinfo, help)": "Konsolenbefehle hier eingeben (Beispiel: getinfo, help)",
   "Enter manual Core mode?": "In den manuellen Daemon-Modus wechseln?",
   "Enter your message": "Geben Sie Ihre Nachricht ein",
+  "Enter your wallet password": null,
   "Error bootstrapping recent database": null,
   "Error changing password": "Fehler beim ändern des Passwort",
   "Error copying module files": null,
@@ -450,6 +452,7 @@
   "Wallet is not encrypted": null,
   "Wallet is not staking": null,
   "Wallet is staking": null,
+  "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
   "Warning": null,
   "Yes": "Ja",
