--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -76,6 +76,7 @@
   "Closing Nexus Wallet": "Closing Nexus Wallet",
   "Color scheme": "Color scheme",
   "Color scheme has been reset to default": "Color scheme has been reset to default",
+  "Confirm": "Confirm",
   "Confirm password": "Confirm password",
   "Confirmations": "Confirmations",
   "Connecting to Nexus Core": "Connecting to Nexus Core",
@@ -146,6 +147,7 @@
   "Enter console commands here (ex: getinfo, help)": "Enter console commands here (ex: getinfo, help)",
   "Enter manual Core mode?": "Enter manual Core mode?",
   "Enter your message": "Enter your message",
+  "Enter your wallet password": "Enter your wallet password",
   "Error bootstrapping recent database": "Error bootstrapping recent database",
   "Error changing password": "Error changing password",
   "Error copying module files": "Error copying module files",
@@ -450,6 +452,7 @@
   "Wallet is not encrypted": "Wallet is not encrypted",
   "Wallet is not staking": "Wallet is not staking",
   "Wallet is staking": "Wallet is staking",
+  "Wallet password": "Wallet password",
   "Wallet will be automatically refreshed for the change to take effect": "Wallet will be automatically refreshed for the change to take effect",
   "Warning": "Warning",
   "Yes": "Yes",
