--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -76,6 +76,7 @@
   "Closing Nexus Wallet": null,
   "Color scheme": "Schéma de couleurs",
   "Color scheme has been reset to default": "Schéma couleur a été réinitialisé à sa valeur par défaut",
+  "Confirm": null,
   "Confirm password": "Confirmez le mot de passe",
   "Confirmations": "Confirmations",
   "Connecting to Nexus Core": "Chargement du daemon, veuillez patienter...",
@@ -146,6 +147,7 @@
   "Enter console commands here (ex: getinfo, help)": "Entrez les commandes de la console ici (ex: getinfo, help)",
   "Enter manual Core mode?": "Entrer en mode daemon manuel?",
   "Enter your message": "Entrez votre message",
+  "Enter your wallet password": null,
   "Error bootstrapping recent database": null,
   "Error changing password": "Erreur du changement de mot de passe",
   "Error copying module files": null,
@@ -450,6 +452,7 @@
   "Wallet is not encrypted": null,
   "Wallet is not staking": null,
   "Wallet is staking": null,
+  "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
   "Warning": null,
   "Yes": "Oui",
