--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -76,6 +76,7 @@
   "Closing Nexus Wallet": null,
   "Color scheme": null,
   "Color scheme has been reset to default": null,
+  "Confirm": null,
   "Confirm password": "パスワードを認証する",
   "Confirmations": "確認",
   "Connecting to Nexus Core": "デーモンをロード中、しばらくお待ちください",
@@ -146,6 +147,7 @@
   "Enter console commands here (ex: getinfo, help)": "ここにコンソールコマンドを入力してください（例：getinfo、help）",
   "Enter manual Core mode?": "手動デーモンモードに入る？",
   "Enter your message": "あなたのメッセージを入力してくださいr",
+  "Enter your wallet password": null,
   "Error bootstrapping recent database": null,
   "Error changing password": null,
   "Error copying module files": null,
@@ -450,6 +452,7 @@
   "Wallet is not encrypted": null,
   "Wallet is not staking": null,
   "Wallet is staking": null,
+  "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
   "Warning": null,
   "Yes": "はい",
