--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -76,6 +76,7 @@
   "Closing Nexus Wallet": null,
   "Color scheme": null,
   "Color scheme has been reset to default": null,
+  "Confirm": null,
   "Confirm password": "비밀번호 확인",
   "Confirmations": "확인",
   "Connecting to Nexus Core": "데몬로드 중, 잠시 기다려주십시오.",
@@ -146,6 +147,7 @@
   "Enter console commands here (ex: getinfo, help)": "여기에 콘솔 명령을 입력하십시오 (예 : getinfo, help)",
   "Enter manual Core mode?": "수동 데몬 모드로 전환 하시겠습니까?",
   "Enter your message": "메시지 입력",
+  "Enter your wallet password": null,
   "Error bootstrapping recent database": null,
   "Error changing password": null,
   "Error copying module files": null,
@@ -450,6 +452,7 @@
   "Wallet is not encrypted": null,
   "Wallet is not staking": null,
   "Wallet is staking": null,
+  "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
   "Warning": null,
   "Yes": "예",
