--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -76,6 +76,7 @@
   "Closing Nexus Wallet": "Sluiten van Nexus",
   "Color scheme": null,
   "Color scheme has been reset to default": null,
+  "Confirm": null,
   "Confirm password": "Bevestig Wachtwoord",
   "Confirmations": "Bevestigingen",
   "Connecting to Nexus Core": "Portemonnee laden, een ogenblik geduld",
@@ -146,6 +147,7 @@
   "Enter console commands here (ex: getinfo, help)": "Geef Console Commando's Hier (vb: getinfo, help)",
   "Enter manual Core mode?": "Ga naar handmatige daemon-modus?",
   "Enter your message": "Voer uw bericht in",
+  "Enter your wallet password": null,
   "Error bootstrapping recent database": null,
   "Error changing password": null,
   "Error copying module files": null,
@@ -450,6 +452,7 @@
   "Wallet is not encrypted": null,
   "Wallet is not staking": null,
   "Wallet is staking": null,
+  "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
   "Warning": null,
   "Yes": "Ja",
