--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -76,6 +76,7 @@
   "Closing Nexus Wallet": "Zamykanie portfela Nexus",
   "Color scheme": "Schemat kolorów",
   "Color scheme has been reset to default": "Color został zmieniony na domyślny",
+  "Confirm": null,
   "Confirm password": "Potwierdż hasło",
   "Confirmations": "Potwierdzenia",
   "Connecting to Nexus Core": "Pobieranie portfela , proszę czekać",
@@ -146,6 +147,7 @@
   "Enter console commands here (ex: getinfo, help)": "Wpisz komendy konsoli (np: getinfo, help)",
   "Enter manual Core mode?": "Czy chcesz wejść w reczny tryb deamon ?",
   "Enter your message": "Wpisz wiadomosc",
+  "Enter your wallet password": null,
   "Error bootstrapping recent database": null,
   "Error changing password": "Błąd przy zmianie hasła",
   "Error copying module files": null,
@@ -450,6 +452,7 @@
   "Wallet is not encrypted": null,
   "Wallet is not staking": null,
   "Wallet is staking": null,
+  "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
   "Warning": null,
   "Yes": "Tak",
