--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -76,6 +76,7 @@
   "Closing Nexus Wallet": "Fechando a carteira da Nexus",
   "Color scheme": "Esquema de cores",
   "Color scheme has been reset to default": "Esquema de cores foi redefinido para o padrão",
+  "Confirm": null,
   "Confirm password": "Confirmar senha",
   "Confirmations": "Confirmações",
   "Connecting to Nexus Core": "Carregando carteira, por favor aguarde",
@@ -146,6 +147,7 @@
   "Enter console commands here (ex: getinfo, help)": "Digite os comandos do console aqui (ex: getinfo, help)",
   "Enter manual Core mode?": "Entre no modo daemon manual?",
   "Enter your message": "Digite a sua mensagem",
+  "Enter your wallet password": null,
   "Error bootstrapping recent database": null,
   "Error changing password": "Erro ao alterar senha",
   "Error copying module files": null,
@@ -450,6 +452,7 @@
   "Wallet is not encrypted": null,
   "Wallet is not staking": null,
   "Wallet is staking": null,
+  "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
   "Warning": null,
   "Yes": "Sim",
