--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -76,6 +76,7 @@
   "Closing Nexus Wallet": null,
   "Color scheme": null,
   "Color scheme has been reset to default": null,
+  "Confirm": null,
   "Confirm password": "Подтвердите пароль",
   "Confirmations": "Подтверждения",
   "Connecting to Nexus Core": "Загрузка демонов, пожалуйста, подождите",
@@ -146,6 +147,7 @@
   "Enter console commands here (ex: getinfo, help)": "Введите команды консоли здесь (ex: getinfo, help)",
   "Enter manual Core mode?": "Войдите в ручной режим демона?",
   "Enter your message": "Введите ваше сообщение",
+  "Enter your wallet password": null,
   "Error bootstrapping recent database": null,
   "Error changing password": null,
   "Error copying module files": null,
@@ -450,6 +452,7 @@
   "Wallet is not encrypted": null,
   "Wallet is not staking": null,
   "Wallet is staking": null,
+  "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
   "Warning": null,
   "Yes": "да",
