--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -76,6 +76,7 @@
   "Closing Nexus Wallet": "Cierre cartera Nexus",
   "Color scheme": "Esquema de color",
   "Color scheme has been reset to default": "El esquema de color se ha restablecido a los valores predeterminados",
+  "Confirm": null,
   "Confirm password": "Confirmar contraseña",
   "Confirmations": "Confirmaciones",
   "Connecting to Nexus Core": "Cargando billetera, por favor espere",
@@ -146,6 +147,7 @@
   "Enter console commands here (ex: getinfo, help)": "Ingrese los comandos de la consola aquí (por ejemplo, getinfo, ayuda)",
   "Enter manual Core mode?": "¿Entrar en el modo manual de daemon?",
   "Enter your message": "Ingrese su mensaje",
+  "Enter your wallet password": null,
   "Error bootstrapping recent database": null,
   "Error changing password": "Error al cambiar la contraseña",
   "Error copying module files": null,
@@ -450,6 +452,7 @@
   "Wallet is not encrypted": null,
   "Wallet is not staking": null,
   "Wallet is staking": null,
+  "Wallet password": null,
   "Wallet will be automatically refreshed for the change to take effect": null,
   "Warning": null,
   "Yes": "Sí",
